--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,15 @@
+import jaci.gradle.deploy.artifact.FileCollectionArtifact
+
 plugins {
     id "java"
     id "eclipse"
     id "idea"
     id "jaci.openrio.gradle.GradleRIO" version "2018.03.06"
+}
+
+wpi {
+    ctreVersion = '5.3.1.0'
+    wpilibVersion = '2018.4.1'
 }
 
 repositories {
